--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,10 +6,21 @@
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
-<body>
-  
-  
+<body class='body-background'>
+  <% num = rand(2) %>
+  <% if num == 0 %>
+    <%= image_tag('Signally.jpg', :alt => 'Signally News') %>
+  <% else %>
+    <%= image_tag('Signally.jpg', :alt => 'Signally News') %>
+  <% end %>
+<br>
+  <% if current_user %>
+    Signed in as <%= current_user.name %> | <%= link_to "Logout", '/logout' %>
+  <% else %>
+    <%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %>
+  <% end %>
 
+  
 <%= yield %>
 
 </body>
