--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,9 @@
 <h1>Admin Page: Display users</h1>
 
-<h3><%= @user.username %></h3>
+<h3>Username: <%= @user.username %></h3>
+<h3>First Name: <%= @user.first_name %></h3>
+<h3>Last Name: <%= @user.last_name %></h3>
+<h3>Email: <%= @user.email %></h3>
+<h3>Member since: <%= @user.created_at %></h3>
+<h5><%= link_to "Edit", "/users/#{@user.id}/edit" %></h5>
+
