--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,5 +5,7 @@
 <h3>Last Name: <%= @user.last_name %></h3>
 <h3>Email: <%= @user.email %></h3>
 <h3>Member since: <%= @user.created_at %></h3>
-<h5><%= link_to "Edit", "/users/#{@user.id}/edit" %></h5>
+<h5><%= link_to "Edit Profile", "/users/#{@user.id}/edit"  %>  |  
+<%=  link_to "Delete User", "/users/#{@user.id}", method: :delete %></h5>
+
 
