--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,12 +15,11 @@
   <% end %>
 <br>
   <% if current_user %>
-    Signed in as <%= current_user.username %> | <%= link_to "Logout", '/logout' %>
+    Signed in as <b><%= current_user.username %></b> | <%= link_to "Logout", '/logout' %>
   <% else %>
     <%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %>
   <% end %>
 
-  
 <%= yield %>
 
 </body>
