--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,9 +10,9 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
+ *= require_main
+ *= fixed-positioning
  *= require_tree .
  *= require_self
- *= require_main.css
- *= fixed-positioning.css
 
  */
