--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -6,3 +6,9 @@
   border: 1px solid black;
   border-radius: 2px;
 }
+
+#intro {
+  background: linear-gradient(
+      rgba(255, 0, 0, 0.55), 
+      rgba(255, 0, 0, 0.25)    ), url(blueprint.jpg);
+}
