--- a/app/views/signally/index.html.erb
+++ b/app/views/signally/index.html.erb
@@ -2,28 +2,21 @@
   <div id="bg2" data-0="background-position:0px 0px;" data-end="background-position:-500px -8000px;"></div>
   <div id="bg3" data-0="background-position:0px 0px;" data-end="background-position:-500px -6000px;"></div>
 
-  <div id="progress" data-0="width:0%;background:hsl(200, 100%, 50%);" data-end="width:100%;background:hsl(920, 100%, 50%);"></div>
-
-  <div id="intro" data-0="opacity:1;top:3%;transform:rotate(0deg);transform-origin:0 0;" data-400="opacity:0;top:-10%;background-color: #d966ff">
+  <div id="intro" data-0="opacity:1;top:3%" data-300="opacity:1;top:3%;" data-1000="display:block;" data-1700="opacity:1;top:3%;display:none;background-color: #4d94ff">
     <h1><a href="https://github.com/Prinzhorn/skrollr">Signally</a></h1>
     <h2>News Title (update link)</h2
       <% if current_user %>
-    Signed in as <b><%= current_user.username %></b> | <%= link_to "Logout", '/logout' %>
+    Signed in as <b>Hello and welcome, <%= current_user.username %></b> | <%= link_to "Logout", '/logout' %>
   <% else %>
     <%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %>
   <% end %>
 
-
-
-
-
-
-
-
   <p>Scrolling Headline here</p>
   </div>
 
-    <div id="intro" data-300="top:100%;" data-800="top:0%;" data-1000="display:block;" data-1700="top:-100%;display:none;background-color: #4d94ff">
+  
+
+    <div id="intro" data-300="opacity:0;top:3%" data-800="opacity:1;top:3%;" data-1000="display:block;" data-1700="opacity:1;top:3%;display:none;background-color: #4d94ff">
 
     <h2><%= @rss_news.channel.title  %></h2>
     <% title = @rss_news.channel.title %>
@@ -39,14 +32,7 @@
 
   </div>
 
-
-
-
-
-
-
-
-  <div id="intro" data-1100="top:100%;" data-1600="top:0%;" data-1800="display:block;" data-2500="top:-100%;display:none;background-color: #ff944d">
+  <div id="intro" data-1100="opacity:0;top:3%;" data-1600="opacity:1;top:3%;" data-1800="display:block;" data-2500="top:3%;display:none;background-color: #ff944d">
       <h2><%= @rss_sports.channel.title  %></h2>
 
       <% 6.times do |index| %>
