--- a/app/views/signally/index.html.erb
+++ b/app/views/signally/index.html.erb
@@ -14,7 +14,7 @@
   <p>Scrolling Headline here</p>
   </div>
 
-  
+
 
     <div id="intro" data-300="opacity:0;top:3%" data-800="opacity:1;top:3%;" data-1000="display:block;" data-1700="opacity:1;top:3%;display:none;background-color: #4d94ff">
 
@@ -32,7 +32,7 @@
 
   </div>
 
-  <div id="intro" data-1100="opacity:0;top:3%;" data-1600="opacity:1;top:3%;" data-1800="display:block;" data-2500="top:3%;display:none;background-color: #ff944d">
+  <div id="intro" data-1100="opacity:0;top:3%;" data-1600="opacity:1;top:3%;" data-1800="display:block;" data-2500="top:3%;display:none;background-color: #4d07dd">
       <h2><%= @rss_sports.channel.title  %></h2>
 
       <% 6.times do |index| %>
@@ -46,12 +46,37 @@
       </div>
   </div>
 
-  <div id="intro" data-1900="top:100%;" data-2400="top:0%;" data-2600="display:block;" data-3300="top:-100%;display:none;background-color: #ff4d4d">
+  <div id="intro2" data-1900="opacity:0;top:3%;" data-2400="opacity:1;top:3%;" data-2600="display:block;" data-3300="top:3%;display:none;background-color: #ff944d">
 
-    <h2>Weather</h2>
-    <p>WEATHER scroll right here!!!</p>
+    <h2><%= @rss_business.channel.title %></h2>
+
+      <% 6.times do |index| %>
+        <% business_headline = @rss_business.entries[index].title %> 
+        <% link_to "#{business_headline}", @rss_business.items[index].link %>
+      <% end %>
+
+
+      <div id="business_scroll" class="ticker">
+        <%= @business_scroll %>
+      </div>
+  </div>
+
+    <div id="intro" data-2700="opacity:0;top:3%;" data-3200="opacity:1;top:3%;" data-3400="display:block;" data-4100="top:3%;display:none;background-color: #ff944d">
+
+    <h2><%= @rss_entertainment.channel.title %></h2>
+
+      <% 6.times do |index| %>
+        <% entertainment_headline = @rss_entertainment.entries[index].title %> 
+        <% link_to "#{entertainment_headline}", @rss_entertainment.items[index].link %>
+      <% end %>
+
+
+      <div id="entertainment_scroll" class="ticker">
+        <%= @entertainment_scroll %>
+      </div>
   </div>
 
 
-
   <div id="scrollbar" data-0="top:0%;margin-top:2px;" data-end="top:100%;margin-top:-52px;"></div>
+
+  <div hidden="true" id="scroll-array"><%= @scroll_array %></div>
