--- a/app/views/signally/index.html.erb
+++ b/app/views/signally/index.html.erb
@@ -4,77 +4,86 @@
 
   <div id="intro" data-0="opacity:1;top:3%" data-300="opacity:1;top:3%;" data-1000="display:block;" data-1700="opacity:1;top:3%;display:none;background-color: #4d94ff">
     <h1><a href="https://github.com/Prinzhorn/skrollr">Signally</a></h1>
-    <h2>News Title (update link)</h2
+    <h2>News. Info. Headlines. Delivered.</h2>
       <% if current_user %>
-    Signed in as <b>Hello and welcome, <%= current_user.username %></b> | <%= link_to "Logout", '/logout' %>
+    <b>Hello and welcome, <%= current_user.username %></b> | <%= link_to "Logout", '/logout' %>
   <% else %>
     <%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %>
   <% end %>
 
-  <p>Scrolling Headline here</p>
+  <p>Current headlines available on Signally device.</p>
   </div>
 
+    <%#= link_to '/news' do %>
+       <div id="intro2" data-300="opacity:0;top:3%" data-800="opacity:1;top:3%;" data-1000="display:block;" data-1700="opacity:1;top:3%;display:none;background-color: #4d94ff">
+
+        
+        <h2><%= @rss_news.channel.title  %></h2>
+        <% title = @rss_news.channel.title %>
+        <% 6.times do |index| %>
+          <% headline = @rss_news.entries[index].title %>
+          <% link_to "#{headline}", @rss_news.items[index].link %>
+        <% end %>
+
+        <div id="headline_scroll" class="ticker">
+          <%= @news_scroll %>
+        </div>
+
+      </div>
+    <%# end %>
+
+    <%= link_to '/sports' do %>
+      <div id="intro3" data-1100="opacity:0;top:3%;" data-1600="opacity:1;top:3%;" data-1800="display:block;" data-2500="top:3%;display:%= link_to 'some_controller_name/some_get_request' do %>none;background-color: #4d07dd">
+          <h2><%= @rss_sports.channel.title  %></h2>
+
+          <% 6.times do |index| %>
+            <% sport_headline = @rss_sports.entries[index].title %> 
+            <% link_to "#{sport_headline}", @rss_sports.items[index].link %>
+          <% end %>
 
 
-    <div id="intro" data-300="opacity:0;top:3%" data-800="opacity:1;top:3%;" data-1000="display:block;" data-1700="opacity:1;top:3%;display:none;background-color: #4d94ff">
-
-    <h2><%= @rss_news.channel.title  %></h2>
-    <% title = @rss_news.channel.title %>
-
-    <% 6.times do |index| %>
-      <% headline = @rss_news.entries[index].title %>
-      <% link_to "#{headline}", @rss_news.items[index].link %>
+          <div id="sport_scroll" class="ticker">
+            <%= @sports_scroll %>
+          </div>
+      </div>
     <% end %>
 
-    <div id="headline_scroll" class="ticker">
-      <%= @news_scroll %>
-    </div>
 
-  </div>
+    <%= link_to '/business' do %>
 
-  <div id="intro" data-1100="opacity:0;top:3%;" data-1600="opacity:1;top:3%;" data-1800="display:block;" data-2500="top:3%;display:none;background-color: #4d07dd">
-      <h2><%= @rss_sports.channel.title  %></h2>
+      <div id="intro4" data-1900="opacity:0;top:3%;" data-2400="opacity:1;top:3%;" data-2600="display:block;" data-3300="top:3%;display:none;background-color: #ff944d">
 
-      <% 6.times do |index| %>
-        <% sport_headline = @rss_sports.entries[index].title %> 
-        <% link_to "#{sport_headline}", @rss_sports.items[index].link %>
-      <% end %>
+        <h2><%= @rss_business.channel.title %></h2>
+
+          <% 6.times do |index| %>
+            <% business_headline = @rss_business.entries[index].title %> 
+            <% link_to "#{business_headline}", @rss_business.items[index].link %>
+          <% end %>
 
 
-      <div id="sport_scroll" class="ticker">
-        <%= @sports_scroll %>
+          <div id="business_scroll" class="ticker">
+            <%= @business_scroll %>
+          </div>
       </div>
-  </div>
 
-  <div id="intro2" data-1900="opacity:0;top:3%;" data-2400="opacity:1;top:3%;" data-2600="display:block;" data-3300="top:3%;display:none;background-color: #ff944d">
+    <% end %>
 
-    <h2><%= @rss_business.channel.title %></h2>
+    <%#= link_to '/entertainment' do %>
+        <div id="intro5" data-2700="opacity:0;top:3%;" data-3200="opacity:1;top:3%;" data-3400="display:block;" data-4100="top:3%;display:none;background-color: #ff944d">
 
-      <% 6.times do |index| %>
-        <% business_headline = @rss_business.entries[index].title %> 
-        <% link_to "#{business_headline}", @rss_business.items[index].link %>
-      <% end %>
+        <h2><%= @rss_entertainment.channel.title %></h2>
+
+          <% 6.times do |index| %>
+            <% entertainment_headline = @rss_entertainment.entries[index].title %> 
+            <% link_to "#{entertainment_headline}", @rss_entertainment.items[index].link %>
+          <% end %>
 
 
-      <div id="business_scroll" class="ticker">
-        <%= @business_scroll %>
+          <div id="entertainment_scroll" class="ticker">
+            <%= @entertainment_scroll %>
+          </div>
       </div>
-  </div>
-
-    <div id="intro" data-2700="opacity:0;top:3%;" data-3200="opacity:1;top:3%;" data-3400="display:block;" data-4100="top:3%;display:none;background-color: #ff944d">
-
-    <h2><%= @rss_entertainment.channel.title %></h2>
-
-      <% 6.times do |index| %>
-        <% entertainment_headline = @rss_entertainment.entries[index].title %> 
-        <% link_to "#{entertainment_headline}", @rss_entertainment.items[index].link %>
-      <% end %>
-
-
-      <div id="entertainment_scroll" class="ticker">
-        <%= @entertainment_scroll %>
-      </div>
-  </div>
+    <%# end %> 
 
 
   <div id="scrollbar" data-0="top:0%;margin-top:2px;" data-end="top:100%;margin-top:-52px;"></div>
