--- a/app/views/signally/news.html.erb
+++ b/app/views/signally/news.html.erb
@@ -4,21 +4,21 @@
 <% title = @rss_news.channel.title %>
 
 <ul>
-  <li><% headline1 = @rss_news.entries.first.title %>
-  <%= link_to "#{headline1}", @rss_news.items.first.link %>
+  <% headline1 = @rss_news.entries.first.title %>
+  <li><%= link_to "#{headline1}", @rss_news.items.first.link %></li>
 
-  <li><% headline2 = @rss_news.entries.second.title %>
-  <%= link_to "#{headline2}", @rss_news.items.second.link %>
+  <% headline2 = @rss_news.entries.second.title %>
+  <li><%= link_to "#{headline2}", @rss_news.items.second.link %></li>
 
-  <li><% headline3 = @rss_news.entries.third.title %>
-  <%= link_to "#{headline3}", @rss_news.items.third.link %>
+  <% headline3 = @rss_news.entries.third.title %>
+  <li><%= link_to "#{headline3}", @rss_news.items.third.link %></li>
 
-  <li><% headline4 = @rss_news.entries.fourth.title %> 
-  <%= link_to "#{headline4}", @rss_news.items.fourth.link %>
+  <% headline4 = @rss_news.entries.fourth.title %> 
+  <li><%= link_to "#{headline4}", @rss_news.items.fourth.link %></li>
 
-  <li><% headline5 = @rss_news.entries.fifth.title %> 
-  <%= link_to "#{headline5}", @rss_news.items.fifth.link %>
+  <% headline5 = @rss_news.entries.fifth.title %> 
+  <li><%= link_to "#{headline5}", @rss_news.items.fifth.link %></li>
 
-  <li><% headline_last = @rss_news.entries.last.title %> 
-  <%= link_to "#{headline_last}", @rss_news.items.last.link %>
+  <% headline_last = @rss_news.entries.last.title %> 
+  <li><%= link_to "#{headline_last}", @rss_news.items.last.link %></li>
 </ul>
